// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HostPodiumState > should render HostPodiumState 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </div>
      <div
        class="side"
      />
    </div>
    <div
      class="content center"
    >
      <div
        class="main"
      >
        <div
          class="title"
        >
          Podium
        </div>
        <div
          class="main"
        >
          <div
            class="column"
          >
            <div
              class="spacer"
            />
            <div
              class="nickname"
            >
              <div
                class="main"
              >
                Radar
              </div>
            </div>
            <div
              class="stack"
            >
              <div
                class="position"
              >
                2
              </div>
              <div
                class="score"
              >
                18398
              </div>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="nickname"
            >
              <div
                class="main"
              >
                ShadowCyborg
              </div>
            </div>
            <div
              class="stack"
            >
              <div
                class="position"
              >
                1
              </div>
              <div
                class="score"
              >
                18456
              </div>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="spacer"
            />
            <div
              class="spacer"
            />
            <div
              class="nickname"
            >
              <div
                class="main"
              >
                ShadowWhirlwind
              </div>
            </div>
            <div
              class="stack"
            >
              <div
                class="position"
              >
                3
              </div>
              <div
                class="score"
              >
                15492
              </div>
            </div>
          </div>
        </div>
        <div
          class="main"
        >
          <div
            class="column"
          >
            <div
              class="position"
            >
              <span>
                4
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            WhiskerFox
          </div>
          <div
            class="column"
          >
            <span
              class="score"
            >
              14118
            </span>
          </div>
          <div
            class="column"
          >
            <div
              class="position"
            >
              <span>
                5
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            JollyNimbus
          </div>
          <div
            class="column"
          >
            <span
              class="score"
            >
              13463
            </span>
          </div>
          <div
            class="column"
          >
            <div
              class="position"
            >
              <span>
                6
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            PuddingPop
          </div>
          <div
            class="column"
          >
            <span
              class="score"
            >
              12459
            </span>
          </div>
          <div
            class="column"
          >
            <div
              class="position"
            >
              <span>
                7
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            MysticPine
          </div>
          <div
            class="column"
          >
            <span
              class="score"
            >
              11086
            </span>
          </div>
          <div
            class="column"
          >
            <div
              class="position"
            >
              <span>
                8
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            FrostyBear
          </div>
          <div
            class="column"
          >
            <span
              class="score"
            >
              10361
            </span>
          </div>
          <div
            class="column"
          >
            <div
              class="position"
            >
              <span>
                9
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            Willo
          </div>
          <div
            class="column"
          >
            <span
              class="score"
            >
              9360
            </span>
          </div>
          <div
            class="column"
          >
            <div
              class="position"
            >
              <span>
                10
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            ScarletFlame
          </div>
          <div
            class="column"
          >
            <span
              class="score"
            >
              6723
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HostPodiumState > should render HostPodiumState without a full leaderboard 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </div>
      <div
        class="side"
      />
    </div>
    <div
      class="content center"
    >
      <div
        class="main"
      >
        <div
          class="title"
        >
          Podium
        </div>
        <div
          class="main"
        >
          <div
            class="column"
          >
            <div
              class="spacer"
            />
            <div
              class="nickname"
            >
              <div
                class="main"
              >
                Radar
              </div>
            </div>
            <div
              class="stack"
            >
              <div
                class="position"
              >
                2
              </div>
              <div
                class="score"
              >
                18398
              </div>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="nickname"
            >
              <div
                class="main"
              >
                ShadowCyborg
              </div>
            </div>
            <div
              class="stack"
            >
              <div
                class="position"
              >
                1
              </div>
              <div
                class="score"
              >
                18456
              </div>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="spacer"
            />
            <div
              class="spacer"
            />
            <div
              class="nickname"
            >
              <div
                class="main"
              >
                ShadowWhirlwind
              </div>
            </div>
            <div
              class="stack"
            >
              <div
                class="position"
              >
                3
              </div>
              <div
                class="score"
              >
                15492
              </div>
            </div>
          </div>
        </div>
        <div
          class="main"
        />
      </div>
    </div>
  </div>
</div>
`;
